workshops/vpc-and-security-group.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS CloudFormation workshop - vpc and secutity group.
# Metadata:
#   AWS::CloudFormation::Interface:
#     ParameterGroups:
#       - Label:
#           default: 'Amazon EC2 Configuration'
#         Parameters:
#           - InstanceType
#     ParameterLabels:
#       InstanceType:
#         default: 'Type of EC2 Instance'
# Parameters:
#   InstanceType:
#     Type: String
#     Default: t2.micro
#     AllowedValues:
#       - t2.micro
#       - t2.small
#     Description: 'Enter t2.micro or t2.small. Default is t2.micro.'
Resources:
  myVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      Tags:
      - Key: stack
        Value: production
  cwlInterfaceEndpoint:
    Type: 'AWS::EC2::VPCEndpoint'
    Properties:
      VpcEndpointType: Interface
      ServiceName: !Sub 'com.amazonaws.${AWS::Region}.logs'
      VpcId: !Ref myVPC
      # SubnetIds: 
      #   - !Ref subnetA
      #   - !Ref subnetB
      SecurityGroupIds:
        - !Ref mySecurityGroup
  mySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow http to client host
      VpcId: Ref! myVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
